--- a/trunk/GraphS/src/interfaz/GraphSView.form
+++ b/trunk/GraphS/src/interfaz/GraphSView.form
@@ -23,7 +23,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="jSplitPane1" alignment="0" min="-2" pref="430" max="-2" attributes="0"/>
-                      <Component id="toolBar" alignment="0" pref="451" max="32767" attributes="0"/>
+                      <Component id="toolBar" alignment="0" pref="431" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -34,7 +34,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="toolBar" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jSplitPane1" pref="288" max="32767" attributes="0"/>
+                  <Component id="jSplitPane1" pref="286" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -211,6 +211,7 @@
                     <Property name="name" type="java.lang.String" value="procesadorTextArea" noResource="true"/>
                   </Properties>
                   <Events>
+                    <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="procesadorTextAreaCaretUpdate"/>
                     <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="procesadorTextAreaKeyTyped"/>
                   </Events>
                 </Component>
@@ -485,10 +486,10 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="statusPanelSeparator" alignment="0" pref="451" max="32767" attributes="0"/>
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="statusMessageLabel" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="277" max="32767" attributes="0"/>
+                  <Component id="statusMessageLabel" min="-2" pref="55" max="-2" attributes="0"/>
+                  <EmptySpace pref="222" max="32767" attributes="0"/>
                   <Component id="progressBar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="statusAnimationLabel" min="-2" max="-2" attributes="0"/>
@@ -502,7 +503,7 @@
                   <Component id="statusPanelSeparator" min="-2" pref="2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="statusMessageLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="statusMessageLabel" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
                       <Component id="statusAnimationLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="progressBar" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
